--- a/index.html
+++ b/index.html
@@ -16,27 +16,27 @@
     <header>
       <div class="container">
         <h1>chipgw.github.io</h1>
-        <h2></h2>
-
-        <section id="downloads">
-          <a href="https://github.com/chipgw" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
       </div>
     </header>
 
     <div class="container">
       <section id="main_content">
-        <h3>
-<a name="open-source" class="anchor" href="#open-source"><span class="octicon octicon-link"></span></a>open source</h3>
-
-<p>I maintain a couple minor open source projects:</p>
-
-<ul>
-<li>
-<a href="https://github.com/chipgw/depthview">DepthView</a> is a simple tool for viewing stereo 3d image files.</li>
-<li>
-<a href="https://github.com/chipgw/planets-3d">Planets3D</a> is a simple gravitational simulator.</li>
-</ul>
+        <h3><a name="open-source" class="anchor" href="#open-source"><span class="octicon octicon-link"></span></a>open source</h3>
+        <p>I maintain a couple minor open source projects:</p>
+        <ul>
+          <li><a href="https://github.com/chipgw/depthview">DepthView</a> is a simple viewer for stereo 3d images.</li>
+          <li><a href="https://github.com/chipgw/planets-3d">Planets3D</a> is a simple gravitational simulator.</li>
+        </ul>
+        <br/>
+        <hr>
+        <br/>
+        <h3><a name="me-elswhere" class="anchor" href="#me-elswhere"><span class="octicon octicon-link"></span></a>me elswhere</h3>
+        <ul>
+          <li><a href="http://gwgnetwork.com/members/chip.9/">GWGNetwork</a>, the only online community I regularly take part in.</li>
+          <li><a href="https://twitter.com/chipgw">Twitter</a>, where I do a little bit of talking now and then.</li>
+          <li><a href="https://www.youtube.com/user/chipgw">Youtube</a>, where I occasionaly put pointless little videos.</li>
+          <li><a href="https://github.com/chipgw">GitHub</a> my github profile. tecnically not "elswhere"...</li>
+        </ul>
       </section>
     </div>
 
