use orbit controls script from three.js examples.

--- a/planets-js.html
+++ b/planets-js.html
@@ -6,6 +6,7 @@
   </head>
   <body style="background-color: #010204; margin: 0; overflow: hidden;">
     <script src="javascripts/three.min.js"></script>
+    <script src="javascripts/OrbitControls.js"></script>
     <script src="javascripts/planet.js"></script>
     <script src="javascripts/planetuniverse.js"></script>
     <script src="javascripts/planetinterface.js"></script>
