added ability to load files saved by desktop planets3d.

--- a/planets-js/index.html
+++ b/planets-js/index.html
@@ -5,6 +5,10 @@
     <meta charset="utf-8">
   </head>
   <body style="background-color: #010204; margin: 0; overflow: hidden;">
+    <!-- TODO - make a proper interface. -->
+    <div style="position: absolute;">
+        <input type="file" id="loadfile"/>
+    </div>
     <script src="javascripts/three.min.js"></script>
     <script src="javascripts/OrbitControls.js"></script>
     <script src="javascripts/planet.js"></script>
