only use Orbit Controls on the renderer element. input tags aren't supposed to have a '/' at the end.

--- a/planets-js/index.html
+++ b/planets-js/index.html
@@ -11,12 +11,12 @@
     <!-- Elements used for logic that should not be seen. -->
     <div class="hide">
       <form id="loadFileForm">
-        <input type="file" id="loadFile"/>
+        <input type="file" id="loadFile">
       </form>
     </div>
 
     <div class="menu">
-      <input type="button" id="menuOpenFile" value="Open File"/>
+      <input type="button" id="menuOpenFile" value="Open File">
     </div>
 
     <script src="javascripts/three.min.js"></script>
