--- a/planets-js/index.html
+++ b/planets-js/index.html
@@ -17,6 +17,40 @@
 
     <div class="menu">
       <input type="button" id="menuOpenFile" value="Open File">
+      <input type="button" id="menuCreatePlanet" value="Create Planet">
+    </div>
+
+    <div id="popupBar">
+      <div id="createPlanetPopup">
+        <h1>Create Planet <input type="button" class="popupClose" id="createPlanetClose" value="x"></h1>
+        <table>
+          <tr>
+            <th/>
+            <th>X</th>
+            <th>Y</th>
+            <th>Z</th>
+          </tr>
+          <tr>
+            <th>Position:</th>
+            <th><input type="number" class="tableInput" id="createPositionX" value="0"></th>
+            <th><input type="number" class="tableInput" id="createPositionY" value="0"></th>
+            <th><input type="number" class="tableInput" id="createPositionZ" value="0"></th>
+          </tr>
+          <tr>
+            <th>Velocity:</th>
+            <th><input type="number" class="tableInput" id="createVelocityX" value="0"></th>
+            <th><input type="number" class="tableInput" id="createVelocityY" value="0"></th>
+            <th><input type="number" class="tableInput" id="createVelocityZ" value="0"></th>
+          </tr>
+          <tr>
+            <th>Mass:</th>
+            <th colspan="3"><input type="number" class="tableInput" id="createMass" step="100" value="100"></th>
+          </tr>
+          <tr>
+            <th colspan="4"><input type="button" class="tableInput" id="createPlanetButton" value="Create"></th>
+          </tr>
+        </table>
+      </div>
     </div>
 
     <script src="javascripts/three.min.js"></script>
