--- a/planets-js/index.html
+++ b/planets-js/index.html
@@ -17,10 +17,23 @@
 
     <div class="menu">
       <input type="button" id="menuOpenFile" value="Open File">
+      <input type="button" id="menuSpeedControl" value="Speed Control">
       <input type="button" id="menuCreatePlanet" value="Create Planet">
     </div>
 
     <div id="popupBar">
+      <div id="speedPopup">
+        <h1>Speed Control <input type="button" class="popupClose" id="speedPopupClose" value="x"></h1>
+        <table>
+          <tr>
+            <th colspan="2"><input type="range" class="tableInput" id="speedRange" min="0" max="10000" value="1000"></th>
+          </tr>
+          <tr>
+            <!-- TODO - add icons to buttons -->
+            <th><input type="button" class="tableInput" id="speedPauseResume" value="Pause"></th>
+            <th><input type="button" class="tableInput" id="speedFastForward" value="Fast Forward"></th>
+        </table>
+      </div>
       <div id="createPlanetPopup">
         <h1>Create Planet <input type="button" class="popupClose" id="createPlanetClose" value="x"></h1>
         <table>
