added buttons for clearing and centering the universe.

--- a/planets-js/index.html
+++ b/planets-js/index.html
@@ -19,6 +19,8 @@
       <input type="button" id="menuOpenFile" value="Open File">
       <input type="button" id="menuSpeedControl" value="Speed Control">
       <input type="button" id="menuCreatePlanet" value="Create Planet">
+      <input type="button" id="menuClear" value="Clear Universe">
+      <input type="button" id="menuCenter" value="Center Universe">
     </div>
 
     <div id="popupBar">
