put three.min.js and OrbitControls.js into a "thirdparty" directory.

--- a/planets-js/index.html
+++ b/planets-js/index.html
@@ -79,8 +79,8 @@
       </div>
     </div>
 
-    <script src="javascripts/three.min.js"></script>
-    <script src="javascripts/OrbitControls.js"></script>
+    <script src="javascripts/thirdparty/three.min.js"></script>
+    <script src="javascripts/thirdparty/OrbitControls.js"></script>
     <script src="javascripts/planet.js"></script>
     <script src="javascripts/planetuniverse.js"></script>
     <script src="javascripts/planetinterface.js"></script>
