simplified popup system to toggle table upon clicking the title. (popup titles are always visible now.)

--- a/planets-js/index.html
+++ b/planets-js/index.html
@@ -17,16 +17,13 @@
 
     <div class="menu">
       <input type="button" id="menuOpenFile" value="Open File">
-      <input type="button" id="menuSpeedControl" value="Speed Control">
-      <input type="button" id="menuCreatePlanet" value="Create Planet">
       <input type="button" id="menuClear" value="Clear Universe">
       <input type="button" id="menuCenter" value="Center Universe">
-      <input type="button" id="menuView" value="View Settings">
     </div>
 
     <div id="popupBar">
       <div id="speedPopup">
-        <h1>Speed Control <input type="button" class="popupClose" id="speedPopupClose" value="x"></h1>
+        <h1>Speed Control</h1>
         <table>
           <tr>
             <th colspan="2"><input type="range" class="tableInput" id="speedRange" min="0" max="40000" value="1000"></th>
@@ -39,7 +36,7 @@
         </table>
       </div>
       <div id="viewPopup">
-        <h1>View Settings <input type="button" class="popupClose" id="viewPopupClose" value="x"></h1>
+        <h1>View Settings</h1>
         <table>
           <tr>
             <th>Path Length:</th>
@@ -48,7 +45,7 @@
         </table>
       </div>
       <div id="createPlanetPopup">
-        <h1>Create Planet <input type="button" class="popupClose" id="createPlanetClose" value="x"></h1>
+        <h1>Create Planet</h1>
         <table>
           <tr>
             <th/>
