added random planet generator.

--- a/planets-js/index.html
+++ b/planets-js/index.html
@@ -74,6 +74,30 @@
           </tr>
         </table>
       </div>
+      <div id="randomPopup">
+        <h1>Planet Generator</h1>
+        <table>
+          <tr>
+            <th>Amount:</th>
+            <th><input type="number" class="tableInput" id="randomAmount" value="10"></th>
+          </tr>
+          <tr>
+            <th>Range:</th>
+            <th><input type="number" class="tableInput" id="randomRange" value="1000"></th>
+          </tr>
+          <tr>
+            <th>Max Speed:</th>
+            <th><input type="number" class="tableInput" id="randomSpeed" step="0.1" value="1.0"></th>
+          </tr>
+          <tr>
+            <th>Max Mass:</th>
+            <th><input type="number" class="tableInput" id="randomMass" step="100" value="200"></th>
+          </tr>
+          <tr>
+            <th colspan="2"><input type="button" class="tableInput" id="randomGenerateButton" value="Generate"></th>
+          </tr>
+        </table>
+      </div>
     </div>
 
     <script src="javascripts/thirdparty/three.min.js"></script>
