don't allow generating more than 50 planets at once.

--- a/planets-js/index.html
+++ b/planets-js/index.html
@@ -79,7 +79,7 @@
         <table>
           <tr>
             <th>Amount:</th>
-            <th><input type="number" class="tableInput" id="randomAmount" value="10"></th>
+            <th><input type="number" class="tableInput" id="randomAmount" min="0" max="50" value="10"></th>
           </tr>
           <tr>
             <th>Range:</th>
