--- a/planets-js/index.html
+++ b/planets-js/index.html
@@ -67,7 +67,7 @@
           </tr>
           <tr>
             <th>Mass:</th>
-            <th colspan="3"><input type="number" class="tableInput" id="createMass" step="100" value="100"></th>
+            <th colspan="3"><input type="number" class="tableInput" id="createMass" min="0" step="100" value="100"></th>
           </tr>
           <tr>
             <th colspan="4"><input type="button" class="tableInput" id="createPlanetButton" value="Create"></th>
@@ -91,7 +91,7 @@
           </tr>
           <tr>
             <th>Max Mass:</th>
-            <th><input type="number" class="tableInput" id="randomMass" step="100" value="200"></th>
+            <th><input type="number" class="tableInput" id="randomMass" min="0" step="100" value="200"></th>
           </tr>
           <tr>
             <th colspan="2"><input type="button" class="tableInput" id="randomGenerateButton" value="Generate"></th>
