--- a/planets-js/index.html
+++ b/planets-js/index.html
@@ -42,6 +42,10 @@
             <th>Path Length:</th>
             <th><input type="range" class="tableInput" id="pathLength" min="0" max="4096" value="256"></th>
           </tr>
+          <tr>
+            <th>Path Delta Size:</th>
+            <th><input type="range" class="tableInput" id="pathDistance" min="0.1" max="10" step="0.1" value="1"></th>
+          </tr>
         </table>
       </div>
       <div id="createPlanetPopup">
