--- a/planets-js/index.html
+++ b/planets-js/index.html
@@ -18,6 +18,7 @@
     <div class="menu">
       <input type="button" id="menuOpenFile" value="Open File">
       <input type="button" id="menuDelete" value="Delete Selected">
+      <input type="button" id="menuStop" value="Stop Selected">
       <input type="button" id="menuClear" value="Clear Universe">
       <input type="button" id="menuCenter" value="Center Universe">
     </div>
