Added basic loading screen.

--- a/planets-js/index.html
+++ b/planets-js/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/planetsui.css"/>
   </head>
   <body>
-    <!-- TODO - make a proper interface. -->
+    <div id="loading"><div class="center">Loading<div class="elipsis">...</div></div></div>
 
     <!-- Elements used for logic that should not be seen. -->
     <div class="hide">
