Started work on interactive placement.

--- a/planets-js/index.html
+++ b/planets-js/index.html
@@ -108,6 +108,7 @@
 
     <script src="javascripts/thirdparty/three.min.js"></script>
     <script src="javascripts/thirdparty/OrbitControls.js"></script>
+    <script src="javascripts/utility.js"></script>
     <script src="javascripts/planet.js"></script>
     <script src="javascripts/planetuniverse.js"></script>
     <script src="javascripts/planetinterface.js"></script>
