Added links to Planets-JS and Photon to index.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         <p>I maintain a couple minor open source projects:</p>
         <ul>
           <li><a href="https://github.com/chipgw/depthview">DepthView</a> is a simple viewer for stereo 3d images.</li>
+          <li><a href="https://github.com/chipgw/photon">Photon</a> is a game about lasers and mirrors and stuff.</li>
           <li><a href="https://github.com/chipgw/planets-3d">Planets3D</a> is a simple gravitational simulator.</li>
+          <li><a href="planets-js/">Planets-JS</a> is like the last one, but in your browser.</li>
         </ul>
         <br/>
         <hr>
