Make GWGN fit in one line like everything else.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <br/>
         <h3><a name="me-elswhere" class="anchor" href="#me-elswhere"><span class="octicon octicon-link"></span></a>me elswhere</h3>
         <ul>
-          <li><a href="http://gwgnetwork.com/members/chip.9/">GWGNetwork</a>, the only online community I regularly take part in.</li>
+          <li><a href="http://gwgnetwork.com/members/chip.9/">GWGNetwork</a>, the only forums I'm an active member of.</li>
           <li><a href="https://twitter.com/chipgw">Twitter</a>, where I do a little bit of talking now and then.</li>
           <li><a href="https://www.youtube.com/user/chipgw">Youtube</a>, where I occasionaly put pointless little videos.</li>
           <li><a href="https://github.com/chipgw">GitHub</a> my github profile. tecnically not "elswhere"...</li>
