--- a/planets-js/index.html
+++ b/planets-js/index.html
@@ -21,6 +21,7 @@
       <input type="button" id="menuStop" value="Stop Selected">
       <input type="button" id="menuClear" value="Clear Universe">
       <input type="button" id="menuCenter" value="Center Universe">
+      <input type="button" id="menuFullscreen" value="Toggle Fullscreen">
     </div>
 
     <div id="popupBar">
