Updated index with more stuff.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         <p>I maintain a couple minor open source projects:</p>
         <ul>
           <li><a href="https://github.com/chipgw/depthview">DepthView</a> is a simple viewer for stereo 3d images.</li>
-          <li><a href="https://github.com/chipgw/photon">Photon</a> is a game about lasers and mirrors and stuff.</li>
+          <li><a href="https://github.com/chipgw/openbfme">OpenBFME</a> will someday be an RTS engine that can play BFME.</li>
+          <li><a href="https://github.com/chipgw/photon-legacy">Photon</a> is a game about lasers and mirrors and stuff.</li>
           <li><a href="https://github.com/chipgw/planets-3d">Planets3D</a> is a simple gravitational simulator.</li>
           <li><a href="planets-js/">Planets-JS</a> is like the last one, but in your browser.</li>
         </ul>
@@ -34,8 +35,10 @@
         <br/>
         <h3><a name="me-elswhere" class="anchor" href="#me-elswhere"><span class="octicon octicon-link"></span></a>me elswhere</h3>
         <ul>
+          <li><a href="http://chipgw.com">chipgw.com</a>, my website/blog.</li>
           <li><a href="http://gwgnetwork.com/members/chip.9/">GWGNetwork</a>, the only forums I'm an active member of.</li>
           <li><a href="https://twitter.com/chipgw">Twitter</a>, where I do a little bit of talking now and then.</li>
+          <li><a href="https://plus.google.com/+chipgw">Google+</a>, where talk even less often than on Twitter.</li>
           <li><a href="https://www.youtube.com/user/chipgw">Youtube</a>, where I occasionaly put pointless little videos.</li>
           <li><a href="https://github.com/chipgw">GitHub</a> my github profile. tecnically not "elswhere"...</li>
         </ul>
