--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <p>I maintain a couple minor open source projects:</p>
         <ul>
           <li><a href="https://github.com/chipgw/depthview">DepthView</a> is a simple viewer for stereo 3d images.</li>
+          <li><a href="https://github.com/chipgw/depthview2">DepthView2</a> a fancier viewer for 3d images and videos.</li>
           <li><a href="https://github.com/chipgw/openbfme">OpenBFME</a> will someday be an RTS engine that can play BFME.</li>
           <li><a href="https://github.com/chipgw/photon-legacy">Photon</a> is a game about lasers and mirrors and stuff.</li>
           <li><a href="https://github.com/chipgw/planets-3d">Planets3D</a> is a simple gravitational simulator.</li>
@@ -40,11 +41,9 @@
           <li><a href="https://twitter.com/chipgw">Twitter</a>, where I do a little bit of talking now and then.</li>
           <li><a href="https://plus.google.com/+chipgw">Google+</a>, where talk even less often than on Twitter.</li>
           <li><a href="https://www.youtube.com/user/chipgw">Youtube</a>, where I occasionaly put pointless little videos.</li>
-          <li><a href="https://github.com/chipgw">GitHub</a> my github profile. tecnically not "elswhere"...</li>
+          <li><a href="https://github.com/chipgw">GitHub</a> my github profile. (technically not "elswhere"...)</li>
         </ul>
       </section>
     </div>
-
-    
   </body>
 </html>
