Added link to teensy-watch to index.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
           <li><a href="https://github.com/chipgw/openbfme">OpenBFME</a> will someday be an RTS engine that can play BFME.</li>
           <li><a href="https://github.com/chipgw/photon-legacy">Photon</a> is a game about lasers and mirrors and stuff.</li>
           <li><a href="https://github.com/chipgw/planets-3d">Planets3D</a> is a simple gravitational simulator.</li>
+          <li><a href="https://github.com/chipgw/teensy-watch">Teensy Watch</a> is a WIP watch program for the Teensy 3.1.</li>
           <li><a href="planets-js/">Planets-JS</a> is like the last one, but in your browser.</li>
         </ul>
         <br/>
@@ -38,7 +39,7 @@
         <ul>
           <li><a href="http://chipgw.com">chipgw.com</a>, my website/blog.</li>
           <li><a href="https://twitter.com/chipgw">Twitter</a>, where I do a little bit of talking now and then.</li>
-          <li><a href="https://plus.google.com/+chipgw">Google+</a>, where talk even less often than on Twitter.</li>
+          <li><a href="https://plus.google.com/+chipgw">Google+</a>, where talk even less often.</li>
           <li><a href="https://www.youtube.com/user/chipgw">Youtube</a>, where I occasionaly put pointless little videos.</li>
           <li><a href="https://github.com/chipgw">GitHub</a> my github profile. (technically not "elswhere"...)</li>
         </ul>
