Updated emscripten planets. (Should fix loading issue)

--- a/planets/index.html
+++ b/planets/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="stylesheets/planetsui.css"/>
   </head>
-  <body onload="init()">
+  <body>
      <div id="loading"><div class="center">Loading<div class="elipsis">...</div></div></div>
 
     <!-- Elements used for logic that should not be seen. -->
@@ -199,10 +199,10 @@
     }
     </script>
 
-    <script src="scripts/Planets3D_js.js"></script>
     <script src="scripts/planets-webgl.js"></script>
-    <script src="scripts/FileSaver.min.js"></script>
     <script src="scripts/planets-io.js"></script>
     <script src="scripts/planets-interface.js"></script>
+    <script src="scripts/Planets3D_js.js"></script>
+    <script src="scripts/FileSaver.min.js"></script>
   </body>
 </html>
