Updated index.html with Emscripten-based Planets.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
           <li><a href="https://github.com/chipgw/photon-legacy">Photon</a> is a game about lasers and mirrors and stuff.</li>
           <li><a href="https://github.com/chipgw/planets-3d">Planets3D</a> is a simple gravitational simulator.</li>
           <li><a href="https://github.com/chipgw/teensy-watch">Teensy Watch</a> is a WIP watch program for the Teensy 3.1.</li>
-          <li><a href="planets-js/">Planets-JS</a> is like the last one, but in your browser.</li>
+          <li><a href="planets/">Planets3D</a>, but in your browser with Emscripten.</li>
+          <li><a href="planets-js/">Planets-JS</a> is like the last one, but pure JS.</li>
         </ul>
         <br/>
         <hr>
