--- a/planets/index.html
+++ b/planets/index.html
@@ -42,6 +42,10 @@
               <th><input type="range" class="tableInput" id="pathDistance" min="0.1" max="10" step="0.1" value="1"></th>
             </tr>
             <tr>
+              <th>Grid Size:</th>
+              <th><input type="range" class="tableInput" id="gridSize" min="4" max="64" value="16"></th>
+            </tr>
+            <tr>
               <th>Draw Grid:</th>
               <th><input type="checkbox" class="tableInput" id="drawGrid"></th>
             </tr>
@@ -195,27 +199,46 @@
 
     <script id="texture-vertex" type="x-shader/x-vertex">
     attribute vec4 vertex;
+    attribute vec3 normal;
+    attribute vec3 tangent;
     attribute vec2 uv;
 
     uniform mat4 cameraMatrix;
+    uniform mat4 viewMatrix;
     uniform mat4 modelMatrix;
 
     varying vec2 texCoord;
 
+    varying mat3 N;
+
     void main() {
         gl_Position = cameraMatrix * modelMatrix * vertex;
         texCoord = uv;
+
+        /* Create the view-space normal matrix. */
+        vec3 n = normalize(viewMatrix * vec4(normal, 0.0)).xyz;
+        vec3 t = normalize(viewMatrix * vec4(tangent, 0.0)).xyz;
+        N = mat3(t, -cross(n, t), n);
     }
     </script>
 
     <script id="texture-fragment" type="x-shader/x-fragment">
     precision mediump float;
 
-    uniform sampler2D texture;
+    uniform sampler2D texture_diff;
+    uniform sampler2D texture_nrm;
+
+    uniform vec3 lightDir;
+
     varying vec2 texCoord;
+    varying mat3 N;
 
     void main() {
-        gl_FragColor = texture2D(texture, texCoord);
+        vec3 normal = N * (texture2D(texture_nrm, texCoord).rgb * 2.0 - 1.0);
+
+        float light = max(dot(lightDir, normal), 0.0) + 0.1 + max(0.2 - normal.z * 0.2, 0.0);
+
+        gl_FragColor = vec4(vec3(light) * texture2D(texture_diff, texCoord).rgb, 1.0);
     }
     </script>
 
